@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Harness Inc. All rights reserved.
+ * Copyright 2023 Harness Inc. All rights reserved.
  * Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
  * that can be found in the licenses directory at the root of this repository, also available at
  * https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.
@@ -7,16 +7,20 @@
 
 package io.harness.cdng.environment.helper;
 
-import static io.harness.rule.OwnerRule.ROHITKARELIA;
+import static io.harness.rule.OwnerRule.VAIBHAV_SI;
 
-import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doReturn;
 
 import io.harness.CategoryTest;
 import io.harness.annotations.dev.HarnessTeam;
 import io.harness.annotations.dev.OwnedBy;
+import io.harness.beans.FeatureName;
 import io.harness.category.element.UnitTests;
+import io.harness.cdng.envGroup.beans.EnvironmentGroupEntity;
+import io.harness.cdng.envGroup.services.EnvironmentGroupService;
+import io.harness.cdng.envgroup.yaml.EnvironmentGroupYaml;
 import io.harness.cdng.environment.filters.Entity;
 import io.harness.cdng.environment.filters.FilterType;
 import io.harness.cdng.environment.filters.FilterYaml;
@@ -24,350 +28,352 @@ import io.harness.cdng.environment.filters.MatchType;
 import io.harness.cdng.environment.filters.TagsFilter;
 import io.harness.cdng.environment.yaml.EnvironmentYamlV2;
 import io.harness.cdng.environment.yaml.EnvironmentsYaml;
-import io.harness.cdng.gitops.entity.Cluster;
-import io.harness.ng.core.common.beans.NGTag;
+import io.harness.cdng.infra.yaml.InfraStructureDefinitionYaml;
+import io.harness.cdng.service.beans.ServiceDefinitionType;
 import io.harness.ng.core.environment.beans.Environment;
+import io.harness.ng.core.environment.services.EnvironmentService;
 import io.harness.ng.core.infrastructure.entity.InfrastructureEntity;
+import io.harness.ng.core.infrastructure.services.InfrastructureEntityService;
 import io.harness.pms.yaml.ParameterField;
 import io.harness.rule.Owner;
+import io.harness.utils.NGFeatureFlagHelperService;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import org.jetbrains.annotations.NotNull;
+import java.util.Optional;
+import org.assertj.core.api.Assertions;
+import org.junit.Rule;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.MockitoJUnit;
+import org.mockito.junit.MockitoRule;
+import org.springframework.data.domain.PageImpl;
 
-@OwnedBy(HarnessTeam.CDC)
+@OwnedBy(HarnessTeam.GITOPS)
 public class EnvironmentInfraFilterHelperTest extends CategoryTest {
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testProcessTagsFilterYamlForEnvironmentsForMatchAll() {
-    Set<Environment> listOfEnvironment = getEnvironmentListForAllTagMatch();
+  public static final String ACC_ID = "ACC_ID";
+  public static final String ORG_ID = "ORG_ID";
+  public static final String PROJ_ID = "PROJ_ID";
+  @Mock NGFeatureFlagHelperService featureFlagHelperService;
+  @Mock EnvironmentService environmentService;
+  @Mock InfrastructureEntityService infrastructureEntityService;
+  @Mock EnvironmentGroupService environmentGroupService;
 
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAll();
-    Set<Environment> filteredEnv =
-        getEnvironmentInfraFilterHelper().processFilterYamlForEnvironments(filterYaml, listOfEnvironment);
-    assertThat(filteredEnv.size()).isEqualTo(1);
+  @InjectMocks EnvironmentInfraFilterHelper environmentInfraFilterHelper;
+  @Rule public MockitoRule mockitoRule = MockitoJUnit.rule();
+
+  @Test
+  @Owner(developers = VAIBHAV_SI)
+  @Category(UnitTests.class)
+  public void shouldProcessEnvInfraFilteringForEnvFilterWithNoEnvironments() {
+    FilterYaml envFilter =
+        FilterYaml.builder().entities(new HashSet<>(Arrays.asList(Entity.environments))).type(FilterType.all).build();
+    EnvironmentsYaml environmentsYaml =
+        EnvironmentsYaml.builder().filters(ParameterField.createValueField(Arrays.asList(envFilter))).build();
+
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Collections.emptyList())).when(environmentService).list(any(), any());
+
+    Assertions
+        .assertThatThrownBy(()
+                                -> environmentInfraFilterHelper.processEnvInfraFiltering(
+                                    ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES))
+        .hasMessageContaining("No environments exists in the project");
   }
 
   @Test
-  @Owner(developers = ROHITKARELIA)
+  @Owner(developers = VAIBHAV_SI)
   @Category(UnitTests.class)
-  public void testProcessTagsFilterYamlForEnvironmentsForMatchAny() {
-    Set<Environment> listOfEnvironment = getEnvironmentListForAnyTagMatch();
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAny();
+  public void shouldProcessEnvInfraFilteringForEnvFilterWithNoFilteredEnvironments() {
+    FilterYaml envFilter = FilterYaml.builder()
+                               .entities(new HashSet<>(Arrays.asList(Entity.environments)))
+                               .type(FilterType.tags)
+                               .spec(TagsFilter.builder()
+                                         .matchType(ParameterField.createValueField(MatchType.all.name()))
+                                         .tags(ParameterField.createValueField(null))
+                                         .build())
+                               .build();
+    EnvironmentsYaml environmentsYaml =
+        EnvironmentsYaml.builder().filters(ParameterField.createValueField(Arrays.asList(envFilter))).build();
+    Environment env1 = Environment.builder().build();
 
-    Set<Environment> filteredEnv =
-        getEnvironmentInfraFilterHelper().processFilterYamlForEnvironments(filterYaml, listOfEnvironment);
-    assertThat(listOfEnvironment.size()).isEqualTo(filteredEnv.size());
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Arrays.asList(env1))).when(environmentService).list(any(), any());
+
+    Assertions
+        .assertThatThrownBy(()
+                                -> environmentInfraFilterHelper.processEnvInfraFiltering(
+                                    ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES))
+        .hasMessageContaining("No Environments are eligible for deployment due to applied filters for tags - ");
   }
 
   @Test
-  @Owner(developers = ROHITKARELIA)
+  @Owner(developers = VAIBHAV_SI)
   @Category(UnitTests.class)
-  public void testProcessAllFilterYamlForEnvironments() {
-    Set<Environment> listOfEnvironment = getEnvironmentListForAnyTagMatch();
-    final FilterYaml filterYaml = getAllFilterYaml();
+  public void shouldProcessEnvInfraFilteringForEnvFilterWithNoInfraFilterFound() {
+    FilterYaml envFilter =
+        FilterYaml.builder().entities(new HashSet<>(Arrays.asList(Entity.environments))).type(FilterType.all).build();
+    EnvironmentsYaml environmentsYaml =
+        EnvironmentsYaml.builder().filters(ParameterField.createValueField(Arrays.asList(envFilter))).build();
+    Environment env1 = Environment.builder().identifier("env1").build();
 
-    Set<Environment> filteredEnv =
-        getEnvironmentInfraFilterHelper().processFilterYamlForEnvironments(filterYaml, listOfEnvironment);
-    assertThat(listOfEnvironment.size()).isEqualTo(filteredEnv.size());
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Arrays.asList(env1))).when(environmentService).list(any(), any());
+
+    Assertions
+        .assertThatThrownBy(()
+                                -> environmentInfraFilterHelper.processEnvInfraFiltering(
+                                    ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES))
+        .hasMessageContaining("No Infrastructures found after applying filtering");
   }
 
   @Test
-  @Owner(developers = ROHITKARELIA)
+  @Owner(developers = VAIBHAV_SI)
   @Category(UnitTests.class)
-  public void testProcessAllFilterYamlForClusters() {
-    List<io.harness.cdng.gitops.entity.Cluster> listOfClusters =
-        Arrays.asList(Cluster.builder().clusterRef("cl1").build(), Cluster.builder().clusterRef("cl2").build());
-    final FilterYaml filterYaml = getAllFilterYaml();
-
-    List<Cluster> filteredCls = getEnvironmentInfraFilterHelper().processFilterYamlForGitOpsClusters(
-        filterYaml, Collections.emptySet(), listOfClusters);
-    assertThat(listOfClusters.size()).isEqualTo(filteredCls.size());
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testProcessTagsFilterYamlForClustersForMatchAll() {
-    List<io.harness.cdng.gitops.entity.Cluster> listOfClusters =
-        Arrays.asList(Cluster.builder().clusterRef("cl1").build(), Cluster.builder().clusterRef("cl2").build());
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAll();
-
-    List<Cluster> filteredCls = getEnvironmentInfraFilterHelper().processFilterYamlForGitOpsClusters(
-        filterYaml, getClusterListForAllTagMatch(), listOfClusters);
-    assertThat(filteredCls.size()).isEqualTo(1);
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testProcessTagsFilterYamlForClustersForMatchAny() {
-    List<io.harness.cdng.gitops.entity.Cluster> listOfClusters =
-        Arrays.asList(Cluster.builder().clusterRef("cl1").build(), Cluster.builder().clusterRef("cl2").build());
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAny();
-
-    List<Cluster> filteredCls = getEnvironmentInfraFilterHelper().processFilterYamlForGitOpsClusters(
-        filterYaml, getClusterListForAnyTagMatch(), listOfClusters);
-    assertThat(listOfClusters.size()).isEqualTo(filteredCls.size());
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testApplyFiltersOnEnvsMatchAnyTagFilter() {
-    Set<Environment> listOfEnvironment = getEnvironmentListForAnyTagMatch();
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAny();
-
-    Set<Environment> environments =
-        getEnvironmentInfraFilterHelper().applyFiltersOnEnvs(listOfEnvironment, Arrays.asList(filterYaml));
-    assertThat(environments.size()).isEqualTo(listOfEnvironment.size());
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testApplyFiltersOnEnvsMatchAllTagFilter() {
-    Set<Environment> listOfEnvironment = getEnvironmentListForAnyTagMatch();
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAll();
-
-    Set<Environment> environments =
-        getEnvironmentInfraFilterHelper().applyFiltersOnEnvs(listOfEnvironment, Arrays.asList(filterYaml));
-    assertThat(environments.size()).isEqualTo(2);
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testApplyFiltersOnClustersMatchAnyTagFilter() {
-    Set<io.harness.gitops.models.Cluster> listOfClusters = getClusterListForAnyTagMatch();
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAny();
-
-    List<io.harness.cdng.gitops.entity.Cluster> clsToCluster =
-        Arrays.asList(Cluster.builder().clusterRef("cl1").build(), Cluster.builder().clusterRef("cl2").build());
-
-    Set<Cluster> filteredClusters = getEnvironmentInfraFilterHelper().applyFilteringOnClusters(
-        Arrays.asList(filterYaml), clsToCluster, listOfClusters);
-    assertThat(filteredClusters.size()).isEqualTo(listOfClusters.size());
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testApplyFiltersOnClustersMatchAllTagFilter() {
-    Set<io.harness.gitops.models.Cluster> listOfClusters = getClusterListForAllTagMatch();
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAll();
-
-    List<io.harness.cdng.gitops.entity.Cluster> clsToCluster =
-        Arrays.asList(Cluster.builder().clusterRef("cl1").build(), Cluster.builder().clusterRef("cl2").build());
-
-    Set<Cluster> filteredClusters = getEnvironmentInfraFilterHelper().applyFilteringOnClusters(
-        Arrays.asList(filterYaml), clsToCluster, listOfClusters);
-    assertThat(filteredClusters.size()).isEqualTo(1);
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testApplyFiltersOnClustersNoFilterExists() {
-    Set<io.harness.gitops.models.Cluster> listOfClusters = getClusterListForAllTagMatch();
-
-    List<io.harness.cdng.gitops.entity.Cluster> clsToCluster =
-        Arrays.asList(Cluster.builder().clusterRef("cl1").build(), Cluster.builder().clusterRef("cl2").build());
-
-    Set<Cluster> filteredClusters =
-        getEnvironmentInfraFilterHelper().applyFilteringOnClusters(emptyList(), clsToCluster, listOfClusters);
-    assertThat(filteredClusters.size()).isEqualTo(0);
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testProcessTagsFilterYamlForInfraForMatchAny() {
-    Set<InfrastructureEntity> listOfInfra = getInfrastructureListForAnyTagMatch();
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAny();
-
-    Set<InfrastructureEntity> filteredEnv =
-        getEnvironmentInfraFilterHelper().processFilterYamlForInfraStructures(filterYaml, listOfInfra);
-    assertThat(listOfInfra.size()).isEqualTo(filteredEnv.size());
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testProcessTagsFilterYamlForInfraForMatchAll() {
-    Set<InfrastructureEntity> listOfInfra = getInfrastructureListForAllTagMatch();
-
-    final FilterYaml filterYaml = getTagFilterYamlMatchTypeAll();
-    Set<InfrastructureEntity> filteredEnv =
-        getEnvironmentInfraFilterHelper().processFilterYamlForInfraStructures(filterYaml, listOfInfra);
-    assertThat(filteredEnv.size()).isEqualTo(2);
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testAreFiltersPresent() {
-    assertThat(getEnvironmentInfraFilterHelper().areFiltersPresent(
-                   EnvironmentsYaml.builder()
-                       .uuid("envId")
-                       .values(ParameterField.createValueField(anyList()))
-                       .filters(ParameterField.createValueField(Arrays.asList(FilterYaml.builder().build())))
-                       .build()))
-        .isTrue();
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testAreFiltersPresentReturnsFalseIfNotEnvironmentsExists() {
-    assertThat(getEnvironmentInfraFilterHelper().areFiltersPresent(EnvironmentsYaml.builder().uuid("envId").build()))
-        .isFalse();
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testAreFiltersSetOnIndividualEnvironments() {
-    assertThat(getEnvironmentInfraFilterHelper().areFiltersSetOnIndividualEnvironments(
-                   EnvironmentsYaml.builder()
-                       .uuid("envId")
-                       .values(ParameterField.createValueField(Arrays.asList(
-                           EnvironmentYamlV2.builder().filters(ParameterField.createValueField(anyList())).build())))
-                       .filters(ParameterField.createValueField(anyList()))
-                       .build()))
-        .isTrue();
-  }
-
-  @Test
-  @Owner(developers = ROHITKARELIA)
-  @Category(UnitTests.class)
-  public void testgetEnvV2YamlsWithFilters() {
-    EnvironmentsYaml envId =
+  public void shouldProcessEnvInfraFilteringForEnvFilterWithNoInfrasFoundInEnv() {
+    FilterYaml envFilter =
+        FilterYaml.builder().entities(new HashSet<>(Arrays.asList(Entity.environments))).type(FilterType.all).build();
+    Environment env1 = Environment.builder().identifier("env1").build();
+    FilterYaml infraFilter = FilterYaml.builder()
+                                 .entities(new HashSet<>(Arrays.asList(Entity.infrastructures)))
+                                 .type(FilterType.all)
+                                 .build();
+    EnvironmentsYaml environmentsYaml =
         EnvironmentsYaml.builder()
-            .uuid("envId")
-            .values(ParameterField.createValueField(
-                Arrays.asList(EnvironmentYamlV2.builder().filters(ParameterField.createValueField(anyList())).build())))
-            .filters(ParameterField.createValueField(anyList()))
+            .filters(ParameterField.createValueField(Arrays.asList(envFilter, infraFilter)))
             .build();
-    assertThat(envId).isNotNull();
+
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Arrays.asList(env1))).when(environmentService).list(any(), any());
+    doReturn(Collections.emptyList())
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env1", ServiceDefinitionType.KUBERNETES);
+
+    Assertions
+        .assertThatThrownBy(()
+                                -> environmentInfraFilterHelper.processEnvInfraFiltering(
+                                    ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES))
+        .hasMessageContaining("No Infrastructures found after applying filtering");
   }
 
-  @NotNull
-  private static EnvironmentInfraFilterHelper getEnvironmentInfraFilterHelper() {
-    return new EnvironmentInfraFilterHelper();
+  @Test
+  @Owner(developers = VAIBHAV_SI)
+  @Category(UnitTests.class)
+  public void shouldProcessEnvInfraFilteringForEnvFilterWithSuccess() {
+    FilterYaml envFilter =
+        FilterYaml.builder().entities(new HashSet<>(Arrays.asList(Entity.environments))).type(FilterType.all).build();
+    Environment env1 = Environment.builder().identifier("env1").build();
+    FilterYaml infraFilter = FilterYaml.builder()
+                                 .entities(new HashSet<>(Arrays.asList(Entity.infrastructures)))
+                                 .type(FilterType.all)
+                                 .build();
+    InfrastructureEntity infra1 = InfrastructureEntity.builder().identifier("infra1").build();
+    EnvironmentsYaml environmentsYaml =
+        EnvironmentsYaml.builder()
+            .filters(ParameterField.createValueField(Arrays.asList(envFilter, infraFilter)))
+            .build();
+
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Arrays.asList(env1))).when(environmentService).list(any(), any());
+    doReturn(Arrays.asList(infra1))
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env1", ServiceDefinitionType.KUBERNETES);
+
+    environmentInfraFilterHelper.processEnvInfraFiltering(
+        ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES);
+
+    assertThat(environmentsYaml.getValues()).isNotNull();
+    assertThat(environmentsYaml.getValues().getValue()).isNotNull();
+    assertThat(environmentsYaml.getValues().getValue().size()).isEqualTo(1);
+    EnvironmentYamlV2 environmentYamlV2 = environmentsYaml.getValues().getValue().get(0);
+    assertThat(environmentYamlV2.getEnvironmentRef().getValue()).isEqualTo("env1");
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue()).isNotNull();
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue().size()).isEqualTo(1);
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue().get(0).getIdentifier().getValue())
+        .isEqualTo("infra1");
   }
 
-  private static FilterYaml getTagFilterYamlMatchTypeAll() {
-    Map<String, String> tagMap = new HashMap<>();
-    tagMap.put("env", "dev");
-    return FilterYaml.builder()
-        .entities(Set.of(Entity.environments, Entity.gitOpsClusters, Entity.infrastructures))
-        .type(FilterType.tags)
-        .spec(TagsFilter.builder()
-                  .matchType(ParameterField.createValueField(MatchType.all.name()))
-                  .tags(ParameterField.createValueField(tagMap))
-                  .build())
-        .build();
+  @Test
+  @Owner(developers = VAIBHAV_SI)
+  @Category(UnitTests.class)
+  public void shouldProcessEnvInfraFilteringForEnvFilterForMultipleInfra() {
+    FilterYaml envFilter =
+        FilterYaml.builder().entities(new HashSet<>(Arrays.asList(Entity.environments))).type(FilterType.all).build();
+    Environment env1 = Environment.builder().identifier("env1").build();
+    Environment env2 = Environment.builder().identifier("env2").build();
+    FilterYaml infraFilter = FilterYaml.builder()
+                                 .entities(new HashSet<>(Arrays.asList(Entity.infrastructures)))
+                                 .type(FilterType.all)
+                                 .build();
+    InfrastructureEntity infra1 = InfrastructureEntity.builder().identifier("infra1").build();
+    InfrastructureEntity infra2 = InfrastructureEntity.builder().identifier("infra2").build();
+    EnvironmentsYaml environmentsYaml =
+        EnvironmentsYaml.builder()
+            .filters(ParameterField.createValueField(Arrays.asList(envFilter, infraFilter)))
+            .build();
+
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Arrays.asList(env1, env2))).when(environmentService).list(any(), any());
+    doReturn(Arrays.asList(infra1, infra2))
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env1", ServiceDefinitionType.KUBERNETES);
+    doReturn(Arrays.asList(infra1, infra2))
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env2", ServiceDefinitionType.KUBERNETES);
+
+    environmentInfraFilterHelper.processEnvInfraFiltering(
+        ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES);
+
+    assertThat(environmentsYaml.getValues()).isNotNull();
+    assertThat(environmentsYaml.getValues().getValue()).isNotNull();
+    assertThat(environmentsYaml.getValues().getValue().size()).isEqualTo(2);
+    EnvironmentYamlV2 environmentYamlV2 = environmentsYaml.getValues().getValue().get(0);
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue()).isNotNull();
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue().size()).isEqualTo(2);
   }
 
-  private static FilterYaml getTagFilterYamlMatchTypeAny() {
-    Map<String, String> tagMap = new HashMap<>();
-    tagMap.put("env", "dev");
-    tagMap.put("env1", "dev1");
-    tagMap.put("infra", "dev");
-    tagMap.put("infra1", "dev1");
+  @Test
+  @Owner(developers = VAIBHAV_SI)
+  @Category(UnitTests.class)
+  public void shouldProcessEnvInfraFilteringForInfraFilterWithSingleEnv() {
+    FilterYaml infraFilter = FilterYaml.builder()
+                                 .entities(new HashSet<>(Arrays.asList(Entity.infrastructures)))
+                                 .type(FilterType.all)
+                                 .build();
+    InfrastructureEntity infra1 = InfrastructureEntity.builder().identifier("infra1").build();
+    InfrastructureEntity infra2 = InfrastructureEntity.builder().identifier("infra2").build();
+    EnvironmentYamlV2 envYaml = EnvironmentYamlV2.builder()
+                                    .filters(ParameterField.createValueField(Arrays.asList(infraFilter)))
+                                    .environmentRef(ParameterField.createValueField("env1"))
+                                    .build();
+    EnvironmentsYaml environmentsYaml =
+        EnvironmentsYaml.builder().values(ParameterField.createValueField(Arrays.asList(envYaml))).build();
+    Environment env1 = Environment.builder().identifier("env1").build();
 
-    return FilterYaml.builder()
-        .entities(Set.of(Entity.environments, Entity.gitOpsClusters, Entity.infrastructures))
-        .type(FilterType.tags)
-        .spec(TagsFilter.builder()
-                  .matchType(ParameterField.createValueField(MatchType.any.name()))
-                  .tags(ParameterField.createValueField(tagMap))
-                  .build())
-        .build();
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Arrays.asList(env1))).when(environmentService).list(any(), any());
+    doReturn(Arrays.asList(infra1, infra2))
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env1", ServiceDefinitionType.KUBERNETES);
+
+    environmentInfraFilterHelper.processEnvInfraFiltering(
+        ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES);
+
+    EnvironmentYamlV2 environmentYamlV2 = environmentsYaml.getValues().getValue().get(0);
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue()).isNotNull();
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue().size()).isEqualTo(2);
   }
 
-  private static FilterYaml getAllFilterYaml() {
-    return FilterYaml.builder()
-        .entities(Set.of(Entity.environments, Entity.gitOpsClusters))
-        .type(FilterType.all)
-        .build();
+  @Test
+  @Owner(developers = VAIBHAV_SI)
+  @Category(UnitTests.class)
+  public void shouldProcessEnvInfraFilteringForInfraFilterWithSingleEnvAndSomeFixedInfras() {
+    FilterYaml infraFilter = FilterYaml.builder()
+                                 .entities(new HashSet<>(Arrays.asList(Entity.infrastructures)))
+                                 .type(FilterType.all)
+                                 .build();
+    InfrastructureEntity infra1 = InfrastructureEntity.builder().identifier("infra1").build();
+    InfrastructureEntity infra2 = InfrastructureEntity.builder().identifier("infra2").build();
+    EnvironmentYamlV2 envYaml = EnvironmentYamlV2.builder()
+                                    .filters(ParameterField.createValueField(Arrays.asList(infraFilter)))
+                                    .environmentRef(ParameterField.createValueField("env1"))
+                                    .build();
+    EnvironmentYamlV2 envYaml2 = EnvironmentYamlV2.builder()
+                                     .environmentRef(ParameterField.createValueField("env2"))
+                                     .infrastructureDefinitions(ParameterField.createValueField(
+                                         Arrays.asList(InfraStructureDefinitionYaml.builder()
+                                                           .identifier(ParameterField.createValueField("fixedInfra"))
+                                                           .build())))
+                                     .build();
+    EnvironmentsYaml environmentsYaml =
+        EnvironmentsYaml.builder().values(ParameterField.createValueField(Arrays.asList(envYaml, envYaml2))).build();
+    Environment env1 = Environment.builder().identifier("env1").build();
+
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(new PageImpl<>(Arrays.asList(env1))).when(environmentService).list(any(), any());
+    doReturn(Arrays.asList(infra1, infra2))
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env1", ServiceDefinitionType.KUBERNETES);
+
+    environmentInfraFilterHelper.processEnvInfraFiltering(
+        ACC_ID, ORG_ID, PROJ_ID, environmentsYaml, null, ServiceDefinitionType.KUBERNETES);
+
+    assertThat(environmentsYaml.getValues().getValue().size()).isEqualTo(2);
+    EnvironmentYamlV2 filteredEnvYaml1 =
+        environmentsYaml.getValues()
+            .getValue()
+            .stream()
+            .filter(environmentYamlV2 -> environmentYamlV2.getEnvironmentRef().getValue().equals("env1"))
+            .findFirst()
+            .get();
+    assertThat(filteredEnvYaml1.getInfrastructureDefinitions().getValue()).isNotNull();
+    assertThat(filteredEnvYaml1.getInfrastructureDefinitions().getValue().size()).isEqualTo(2);
+
+    EnvironmentYamlV2 filteredEnvYaml2 =
+        environmentsYaml.getValues()
+            .getValue()
+            .stream()
+            .filter(environmentYamlV2 -> environmentYamlV2.getEnvironmentRef().getValue().equals("env2"))
+            .findFirst()
+            .get();
+    assertThat(filteredEnvYaml2.getInfrastructureDefinitions().getValue().size()).isEqualTo(1);
+    assertThat(filteredEnvYaml2.getInfrastructureDefinitions().getValue().get(0).getIdentifier().getValue())
+        .isEqualTo("fixedInfra");
   }
 
-  @NotNull
-  private static Set<Environment> getEnvironmentListForAnyTagMatch() {
-    List<NGTag> env1Tags = Arrays.asList(NGTag.builder().key("env").value("dev").build());
-    List<NGTag> env2Tags = Arrays.asList(
-        NGTag.builder().key("env").value("dev").build(), NGTag.builder().key("env1").value("dev2").build());
-    final Set<Environment> listOfEnvironment = new HashSet<>(
-        Arrays.asList(Environment.builder().tags(env1Tags).build(), Environment.builder().tags(env2Tags).build()));
-    return listOfEnvironment;
-  }
+  @Test
+  @Owner(developers = VAIBHAV_SI)
+  @Category(UnitTests.class)
+  public void shouldProcessEnvInfraFilteringForEnvGroupForEnvFilter() {
+    FilterYaml envFilter =
+        FilterYaml.builder().entities(new HashSet<>(Arrays.asList(Entity.environments))).type(FilterType.all).build();
+    Environment env1 = Environment.builder().identifier("env1").build();
+    Environment env2 = Environment.builder().identifier("env2").build();
+    FilterYaml infraFilter = FilterYaml.builder()
+                                 .entities(new HashSet<>(Arrays.asList(Entity.infrastructures)))
+                                 .type(FilterType.all)
+                                 .build();
+    InfrastructureEntity infra1 = InfrastructureEntity.builder().identifier("infra1").build();
+    InfrastructureEntity infra2 = InfrastructureEntity.builder().identifier("infra2").build();
+    EnvironmentGroupYaml envGroupYaml =
+        EnvironmentGroupYaml.builder()
+            .envGroupRef(ParameterField.createValueField("EG_1"))
+            .filters(ParameterField.createValueField(Arrays.asList(envFilter, infraFilter)))
+            .build();
+    EnvironmentGroupEntity envGroupEntity =
+        EnvironmentGroupEntity.builder().envIdentifiers(Arrays.asList("env1", "env2")).build();
 
-  @NotNull
-  private static Set<Environment> getEnvironmentListForAllTagMatch() {
-    List<NGTag> env1Tags = Arrays.asList(NGTag.builder().key("env").value("dev").build());
-    List<NGTag> env2Tags = Arrays.asList(NGTag.builder().key("env1").value("dev2").build());
-    final Set<Environment> listOfEnvironment = new HashSet<>(
-        Arrays.asList(Environment.builder().tags(env1Tags).build(), Environment.builder().tags(env2Tags).build()));
-    return listOfEnvironment;
-  }
+    doReturn(true).when(featureFlagHelperService).isEnabled(ACC_ID, FeatureName.CDS_FILTER_INFRA_CLUSTERS_ON_TAGS);
+    doReturn(Optional.of(envGroupEntity)).when(environmentGroupService).get(ACC_ID, ORG_ID, PROJ_ID, "EG_1", false);
+    doReturn(Arrays.asList(env1, env2))
+        .when(environmentService)
+        .fetchesNonDeletedEnvironmentFromListOfIdentifiers(ACC_ID, ORG_ID, PROJ_ID, Arrays.asList("env1", "env2"));
+    doReturn(Arrays.asList(infra1, infra2))
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env1", ServiceDefinitionType.KUBERNETES);
+    doReturn(Arrays.asList(infra1, infra2))
+        .when(infrastructureEntityService)
+        .getAllInfrastructureFromEnvRefAndDeploymentType(
+            ACC_ID, ORG_ID, PROJ_ID, "env2", ServiceDefinitionType.KUBERNETES);
 
-  @NotNull
-  private static Set<io.harness.gitops.models.Cluster> getClusterListForAnyTagMatch() {
-    io.harness.gitops.models.Cluster cl1 = new io.harness.gitops.models.Cluster();
-    cl1.setTags(Map.of("env", "dev"));
-    cl1.setIdentifier("cl1");
+    environmentInfraFilterHelper.processEnvInfraFiltering(
+        ACC_ID, ORG_ID, PROJ_ID, null, envGroupYaml, ServiceDefinitionType.KUBERNETES);
 
-    io.harness.gitops.models.Cluster cl2 = new io.harness.gitops.models.Cluster();
-    cl2.setTags(Map.of("env", "dev", "env1", "dev1"));
-    cl2.setIdentifier("cl2");
-
-    final Set<io.harness.gitops.models.Cluster> listOfClusters = new HashSet<>(Arrays.asList(cl1, cl2));
-    return listOfClusters;
-  }
-
-  @NotNull
-  private static Set<io.harness.gitops.models.Cluster> getClusterListForAllTagMatch() {
-    io.harness.gitops.models.Cluster cl1 = new io.harness.gitops.models.Cluster();
-    cl1.setTags(Map.of("env", "dev"));
-    cl1.setIdentifier("cl1");
-
-    io.harness.gitops.models.Cluster cl2 = new io.harness.gitops.models.Cluster();
-    cl2.setTags(Map.of("env1", "dev1"));
-    cl2.setIdentifier("cl2");
-
-    final Set<io.harness.gitops.models.Cluster> listOfClusters = new HashSet<>(Arrays.asList(cl1, cl2));
-    return listOfClusters;
-  }
-
-  @NotNull
-  private static Set<InfrastructureEntity> getInfrastructureListForAnyTagMatch() {
-    List<NGTag> infra1Tags = Arrays.asList(NGTag.builder().key("infra").value("dev").build());
-    List<NGTag> infra2Tags = Arrays.asList(
-        NGTag.builder().key("infra").value("dev").build(), NGTag.builder().key("infra1").value("dev2").build());
-    final Set<InfrastructureEntity> listOfInfra =
-        new HashSet<>(Arrays.asList(InfrastructureEntity.builder().tags(infra1Tags).build(),
-            InfrastructureEntity.builder().tags(infra2Tags).build()));
-    return listOfInfra;
-  }
-
-  @NotNull
-  private static Set<InfrastructureEntity> getInfrastructureListForAllTagMatch() {
-    List<NGTag> infra1Tags = Arrays.asList(NGTag.builder().key("env").value("dev").build());
-    List<NGTag> infra2Tags = Arrays.asList(
-        NGTag.builder().key("env").value("dev").build(), NGTag.builder().key("env1").value("dev2").build());
-    final Set<InfrastructureEntity> listOfInfra =
-        new HashSet<>(Arrays.asList(InfrastructureEntity.builder().tags(infra1Tags).build(),
-            InfrastructureEntity.builder().tags(infra2Tags).build()));
-    return listOfInfra;
+    assertThat(envGroupYaml.getEnvironments()).isNotNull();
+    assertThat(envGroupYaml.getEnvironments().getValue()).isNotNull();
+    assertThat(envGroupYaml.getEnvironments().getValue().size()).isEqualTo(2);
+    EnvironmentYamlV2 environmentYamlV2 = envGroupYaml.getEnvironments().getValue().get(0);
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue()).isNotNull();
+    assertThat(environmentYamlV2.getInfrastructureDefinitions().getValue().size()).isEqualTo(2);
   }
 }
